rescaled control panel to fit on the stage
renamed "earth system" to "earth values"
fix: append command line args to standard main frame title, instead of replacing title (for sim-sharing)
# 0.0.10 (47428) Dec 27, 2010
12/27/10 dev version with many fixes and changes
only update camera after switching to new mode, to avoid rendering artifacts ("flash" of large body in some cases) 
simplify camera, remove animated zoom stuff
rewind to proper clock time (last time clock was paused) when Rewind button is pressed
rename RestoreProperty to ClockRewindProperty, replace restore with rewind thruout
change control panel button color for ADA compliance, and because blue-on-black is hard to see for everyone
reduce scale of control panel so that everything fits on stage
add "Physics" titled panel around Gravity check box
wire up gravity on/off to model
MessageFormat i18n (value units) for measuring tape
i18n for a couple more strings
add Gravity property and check box, not properly wired up to model
fixed look of disabled rewind button, required ugly copy of FloatingClockControlNode.StepButtonNode.getDisabledImageRescaleOpScale 
remove "Large" and "Very Large" min/max labels on mass sliders, so that we don't have i18n issues, and can use "Space Station" label
improve tick marks on mass sliders so that you can see where the special value (eg "Our Moon") is
reduce font size and unbold the tick mark labels on mass sliders, so that labels don't run together (eg "Large Our Moon")
completed i18n, including use of singular/plural for units
i18n of mass readouts, to handle ordering of value and units
deleted PublicProperty, it's appropriate to move getInitialValue into superclass
Change some class name prefixes from "GO" to "GAO"
Change some class name prefixes from "GravityAndOrbits" to "GAO", where these classes names will be inlined frequently (eg, GAOStrings)
Fixed: replace incomplete "Reset All" node with ResetAllButtonNode
Fixed: Sim doesn't pause on reset all