@@ -4,6 +4,8 @@ package edu.colorado.phet.gravityandorbits.controlpanel;
 
 import java.awt.*;
 import java.awt.geom.Point2D;
+import java.awt.image.BufferedImage;
+import java.awt.image.RescaleOp;
 
 import javax.swing.*;
 
@@ -45,7 +47,7 @@ public class GravityAndOrbitsControlPanel extends VerticalLayoutPanel {
         setFillHorizontal();
 
         // "Physics" subpanel
-        add( new VerticalLayoutPanel( ) {{
+        add( new VerticalLayoutPanel() {{
             setBackground( BACKGROUND );
             setOpaque( false );
             setAnchor( GridBagConstraints.WEST );
@@ -113,14 +115,43 @@ public class GravityAndOrbitsControlPanel extends VerticalLayoutPanel {
                 setBackground( BACKGROUND );
                 setOpaque( false );
                 add( Box.createRigidArea( new Dimension( 25, 1 ) ) );
+
                 add( new GAOCheckBox( GAOStrings.MEASURING_TAPE, module.getMeasuringTapeVisibleProperty() ) {{
+                    final Icon defaultIcon = getIcon();
+                    final Icon disabledUnselectedIcon = grayOut( UIManager.getIcon( "CheckBox.icon" ) );
+                    final Icon disabledSelectedIcon = disabledUnselectedIcon;//todo: find a way to get this from the UIManager; until this is fixed just render as unselected when disabled
+//                    final Icon disabledSelectedIcon = grayOut( UIManager.getLookAndFeel().getDisabledSelectedIcon(this, new ImageIcon( toImage( this, UIManager.getIcon( "CheckBox.icon" )) ) ) );//http://stackoverflow.com/questions/1663729/accessing-look-and-feel-default-icons
+
                     module.getScaleProperty().addObserver( new SimpleObserver() {
                         public void update() {
                             setEnabled( module.getScaleProperty().getValue() == Scale.REAL );//only enable the measuring tape in real scale
                             setForeground( module.getScaleProperty().getValue() == Scale.REAL ? Color.white : Color.darkGray );
+                            if (isEnabled() ){
+                                setIcon( defaultIcon );
+                            }
+                            else{
+                                if (isSelected()){
+                                    setIcon( disabledSelectedIcon );
+                                }else{
+                                    setIcon( disabledUnselectedIcon );
+                                }
+                            }
+                            setIcon( isEnabled() ? defaultIcon : disabledUnselectedIcon );
                         }
                     } );
-                }} );
+                }
+
+                    private Icon grayOut( Icon checkBoxIcon ) {
+                        final BufferedImage image = toImage( this, checkBoxIcon );
+
+                        float[] scales = { 1f, 1f, 1f, 0.5f };//TODO: what about OS's that don't use an alpha channel?
+                        float[] offsets = new float[4];
+
+                        final BufferedImage filtered = new RescaleOp( scales, offsets, null ).filter( image, null );
+                        final Icon disabledIcon = new ImageIcon( filtered );
+                        return disabledIcon;
+                    }
+                } );
             }} );
         }} );
 
@@ -128,8 +159,33 @@ public class GravityAndOrbitsControlPanel extends VerticalLayoutPanel {
         for ( Body body : model.getBodies() ) {
             if ( body.isMassSettable() ) {
                 add( new BodyMassControl( body, body.getMassProperty().getInitialValue() / 2, body.getMassProperty().getInitialValue() * 2,
-                        "", "", body.getTickValue(), body.getTickLabel() ) );
+                                          "", "", body.getTickValue(), body.getTickLabel() ) );
             }
         }
+    }
+
+    public static void showIcon( String name, final Icon icon ) {
+        new JFrame( name ) {{
+            setContentPane( new JCheckBox() {{
+                setIcon( icon );
+            }} );
+            pack();
+        }}.setVisible( true );
+    }
+
+    public static void showImage( String name, final Image image ) {
+        new JFrame( name ) {{
+            setContentPane( new JLabel( new ImageIcon( image ) ) );
+            pack();
+        }}.setVisible( true );
+    }
+
+    public static BufferedImage toImage( Component component, Icon icon ) {
+        BufferedImage image = new BufferedImage( icon.getIconWidth(), icon.getIconHeight(), BufferedImage.TYPE_4BYTE_ABGR_PRE );//guessing type based on experience with mac problems
+//        BufferedImage image = GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice().getDefaultConfiguration().createCompatibleImage( icon.getIconWidth(), icon.getIconHeight() );
+        Graphics2D g2 = image.createGraphics();
+        icon.paintIcon( component, g2, 0, 0 );
+        g2.dispose();
+        return image;
     }
 }
